--- a/mokosupport/build.gradle
+++ b/mokosupport/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName "1.0"
     }
     buildTypes {
+        debug {}
         release {
             minifyEnabled false
         }
@@ -20,6 +21,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'no.nordicsemi.android.support.v18:scanner:1.0.0'
-    implementation 'com.elvishew:xlog:1.3.0'
+    implementation 'com.elvishew:xlog:1.4.0'
     api 'no.nordicsemi.android:dfu:0.6.2'
 }
